# koth-company

./: .dockerignore  .env.example  .gitignore  AGENTS.md  bunfig.toml  drizzle.config.ts  index.html  next.config.ts  package.json  payload.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.base.json  tsconfig.json  tsconfig.node.tsbuildinfo
.github/workflows/: release-images.yml
app/(frontend)/: layout.tsx
app/(payload)/: custom.scss  layout.tsx
cv-worker/: README.md  pyproject.toml
cv-worker/config/: layout.example.yaml
cv-worker/launchd/: com.koth-company.cv-worker.plist
cv-worker/scripts/: run-production-service.sh  service.sh
cv-worker/src/koth_cv/: __init__.py  calibration.py  cli.py  client.py  config.py  detection.py  journal.py  replay.py  runner.py  state_machine.py  stream.py  vision.py
cv-worker/tests/: test_calibration.py  test_cli.py  test_client.py  test_config.py  test_detection.py  test_journal.py  test_pipeline_e2e.py  test_replay.py  test_runner.py  test_service_scripts.py  test_state_machine.py  test_stream.py  test_vision.py
deploy/: Caddyfile  README.md  compose.yaml
docker/: Dockerfile.api  Dockerfile.migrate  Dockerfile.web  migrate-all  migrate-payload.ts  migrate-predictions.ts  payload-migrate.config.ts
docs/: twitch-channel-points.md
scripts/: deploy-production.test.ts  deploy-production.ts  grant-prediction-admin.ts  setup-production-runner
src/: App.test.tsx  App.tsx  cms.test.ts  content.ts  leaderboard.test.ts  leaderboard.ts  styles.css  test-setup.ts
tests/: package-boundaries.test.ts
(+135 files in other folders)
