[project]
name = "koth-cv"
version = "0.1.0"
description = "Local Hydramist KOTH stream automation worker"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "httpx-sse>=0.4,<0.5",
  "numpy>=2,<3",
  "onnxruntime>=1.21,<2",
  "opencv-python>=4.11,<6",
  "pydantic>=2.11,<3",
  "pyyaml>=6,<7",
  "rapidocr>=3.8,<4",
  "streamlink>=7,<9",
  "typer>=0.15,<1",
  "uvicorn>=0.34,<1",
]

[project.scripts]
koth-cv = "koth_cv.cli:app"

[dependency-groups]
dev = ["pytest>=8.3,<9", "ruff>=0.11,<1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/koth_cv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
